修改文件生成windows、linux兼容问题
